--- a/index.html
+++ b/index.html
@@ -153,6 +153,31 @@
   </section>
 
   <section>
+    <h2>Industries Targeted for Dominion</h2>
+    <p>
+      This isn’t just business. It’s coordinated reclamation. We’re not entering markets — we’re flipping them. This is the strike against systemic decay, and the judgment is data-backed.
+    </p>
+
+    <p><strong>Biotech & Cosmetics:</strong> Untapped zones of innovation. Legacy science suppressed the best ideas — we’re reviving what works and releasing it without permission.</p>
+
+    <p><strong>Manufacturing:</strong> Unjustified inflation. Raw input costs are flat, yet prices are up. That’s not economics — that’s manipulation. We’re building in-house pipelines to end it.</p>
+
+    <p><strong>Telecommunications:</strong> There’s no reason phone service should cost money. The hardware exists. The network exists. The fees are fiction. We're deploying open tech to make it free.</p>
+
+    <p><strong>Insurance (Auto & Home):</strong> There’s no reason insurance should sit at the top of the American money flow list. Post-pandemic pricing is a scam — but so was pre-pandemic. It’s a legacy system feeding off fear. We’re rewriting the model to make risk fair, not profitable.</p>
+
+    <p><strong>Jewelry:</strong> This is about art and tech — not markup. Innovation deserves beauty, not price gouging. We’re flipping the chain and putting power in the hands of the creators.</p>
+
+    <p><strong>Transportation & Emergency Transport:</strong> Exploitation is rampant. Immigrants and vulnerable workers have been used, overworked, and ignored. We're building ethical networks with equity and speed at the core.</p>
+
+    <p><strong>Automotive Repair & Towing:</strong> Behind in both tech and transparency. This industry needs centralized tools, smarter marketing, and AI-driven diagnostics — and we already built them.</p>
+
+    <p><strong>Agriculture & Farming Equipment:</strong> Monopolies have turned tractors into locked software prisons. Fees are abusive. Ownership is gone. We’re rebuilding tools for farmers — open-source and fee-free.</p>
+
+    <p><strong>And More:</strong> If there’s a system you know is broken — if you’ve lived under its weight — tell us. This is open dominion. <em>Leave a comment. Suggest what’s next.</em></p>
+  </section>
+
+  <section>
     <h2>How We're Funding the Mission</h2>
     <p>
       We're launching high-impact, high-profit businesses across sectors. Each one is engineered to break industry norms — and redirect capital into the mission. This is capitalism repurposed as warfare.
@@ -170,7 +195,7 @@
   </section>
 
   <section class="cta">
-    <a href=""https://hannahbusbradford.github.io/project7xbus_reach_engine/" target="_blank" rel="noopener noreferrer"">Join the Signal — Stay Invisible, Strike Loud</a>
+    <a href="https://hannahbusbradford.github.io/project7xbus_reach_engine/" target="_blank" rel="noopener noreferrer">Join the Signal — Stay Invisible, Strike Loud</a>
   </section>
 
   <footer>
