--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <section>
     <h2>Why It Matters</h2>
     <p>
-      Wall Street has silently eroded the dollar's value for over a century. This is the strike back. If we win — life gets easier. If we lose — your kids inherit a lifetime of rent and call it freedom.
+      Wall Street has silently eroded the dollar's value for over a century. This is the strike back. If we win together — life gets easier. If we lose — your kids inherit a lifetime of rent and call it freedom.
     </p>
     <p>
       Project 7xBUS isn’t revenge. It’s reset. One the system can’t simulate — or stop.
@@ -155,7 +155,7 @@
   <section>
     <h2>Industries Targeted for Dominion</h2>
     <p>
-      This isn’t just business. It’s coordinated reclamation. We’re not entering markets — we’re flipping them. This is the strike against systemic decay, and the judgment is data-backed.
+      This isn’t just business. It’s coordinated reclamation. We’re not entering markets — we’re flipping them. This is the strike against taking advantage of the American people, and the judgment is data-backed. 
     </p>
 
     <p><strong>Biotech & Cosmetics:</strong> Untapped zones of innovation. Legacy science suppressed the best ideas — we’re reviving what works and releasing it without permission.</p>
