--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <section>
     <h2>Why It Matters</h2>
     <p>
-      Wall Street has silently eroded the dollar's value for over a century. This is the strike back. If we win together — life gets easier. If we lose — your kids inherit a lifetime of rent and call it freedom.
+      Wall Street has silently eroded the dollar's value for over a century. This is the strike back. If we win — life gets easier. If we lose — your kids inherit a lifetime of rent and call it freedom.
     </p>
     <p>
       Project 7xBUS isn’t revenge. It’s reset. One the system can’t simulate — or stop.
@@ -150,31 +150,6 @@
     <div class="quote-box">
       "Slavery is the mirror of what it takes to have human decency with no leverage. We now have the tools to fix that."
     </div>
-  </section>
-
-  <section>
-    <h2>Industries Targeted for Dominion</h2>
-    <p>
-      This isn’t just business. It’s coordinated reclamation. We’re not entering markets — we’re flipping them. This is the strike against taking advantage of the American people, and the judgment is data-backed. 
-    </p>
-
-    <p><strong>Biotech & Cosmetics:</strong> Untapped zones of innovation. Legacy science suppressed the best ideas — we’re reviving what works and releasing it without permission.</p>
-
-    <p><strong>Manufacturing:</strong> Unjustified inflation. Raw input costs are flat, yet prices are up. That’s not economics — that’s manipulation. We’re building in-house pipelines to end it.</p>
-
-    <p><strong>Telecommunications:</strong> There’s no reason phone service should cost money. The hardware exists. The network exists. The fees are fiction. We're deploying open tech to make it free.</p>
-
-    <p><strong>Insurance (Auto & Home):</strong> There’s no reason insurance should sit at the top of the American money flow list. Post-pandemic pricing is a scam — but so was pre-pandemic. It’s a legacy system feeding off fear. We’re rewriting the model to make risk fair, not profitable.</p>
-
-    <p><strong>Jewelry:</strong> This is about art and tech — not markup. Innovation deserves beauty, not price gouging. We’re flipping the chain and putting power in the hands of the creators.</p>
-
-    <p><strong>Transportation & Emergency Transport:</strong> Exploitation is rampant. Immigrants and vulnerable workers have been used, overworked, and ignored. We're building ethical networks with equity and speed at the core.</p>
-
-    <p><strong>Automotive Repair & Towing:</strong> Behind in both tech and transparency. This industry needs centralized tools, smarter marketing, and AI-driven diagnostics — and we already built them.</p>
-
-    <p><strong>Agriculture & Farming Equipment:</strong> Monopolies have turned tractors into locked software prisons. Fees are abusive. Ownership is gone. We’re rebuilding tools for farmers — open-source and fee-free.</p>
-
-    <p><strong>And More:</strong> If there’s a system you know is broken — if you’ve lived under its weight — tell us. This is open dominion. <em>Leave a comment. Suggest what’s next.</em></p>
   </section>
 
   <section>
@@ -195,7 +170,7 @@
   </section>
 
   <section class="cta">
-    <a href="https://hannahbusbradford.github.io/project7xbus_reach_engine/" target="_blank" rel="noopener noreferrer">Join the Signal — Stay Invisible, Strike Loud</a>
+    <a href=""https://hannahbusbradford.github.io/project7xbus_reach_engine/" target="_blank" rel="noopener noreferrer"">Join the Signal — Stay Invisible, Strike Loud</a>
   </section>
 
   <footer>
