--- a/index.html
+++ b/index.html
@@ -157,6 +157,23 @@
     <p>
       We're launching high-impact, high-profit businesses across sectors. Each one is engineered to break industry norms — and redirect capital into the mission. This is capitalism repurposed as warfare.
     </p>
+      <section>
+    <h2>What to Expect</h2>
+    <p>
+      Project 7xBUS is funded by a fleet of disruptive businesses — each one engineered for impact. These aren’t side ventures. They’re economic weapons.
+    </p>
+    <ul style="list-style: none; padding-left: 0;">
+      <li>• <strong>Rosehill Cosmetics</strong> – Biotech skincare with custom formulation SaaS</li>
+      <li>• <strong>ThunderCheeks™</strong> – Chewing gum made from extinct fruit flavors</li>
+      <li>• <strong>Shomer Cybersecurity</strong> – Browser-layer AI that catches threats in real time</li>
+      <li>• <strong>Project 7xBUS</strong> – Weaponized market math built to reverse Wall Street erosion</li>
+      <li>• <strong>House of the Rubies</strong> – Handcrafted jewelry + in-house synthetic gemstone tech</li>
+      <li>• <strong>Matar</strong> – Automated trading systems using unreleased variance frameworks</li>
+      <li>• <strong>BussReck.com</strong> – On-demand mechanic + roadside match system for better pricing</li>
+      <li>• <strong>PureHundreds</strong> – Prophetic fashion rooted in covenant-level purity</li>
+      <li>• <strong>America’s First AI Bee Farm</strong> – Smart agriculture + divine ecosystem stewardship</li>
+    </ul>
+  </section>
   </section>
 
   <section>
