--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   </section>
 
   <section class="cta">
-    <a href=""https://hannahbusbradford.github.io/project7xbus_reach_engine/" target="_blank" rel="noopener noreferrer"">Join the Signal — Stay Invisible, Strike Loud</a>
+    <a href=""https://www.instagram.com/project7xbus//project7xbus_reach_engine/" target="_blank" rel="noopener noreferrer"">Join the Signal — Stay Invisible, Strike Loud</a>
   </section>
 
   <footer>
